fixed wrapping on usernames

--- a/src/app/modules/game/game-room-table-seat/game-room-table-seat.component.less
+++ b/src/app/modules/game/game-room-table-seat/game-room-table-seat.component.less
@@ -98,6 +98,10 @@
   .you {
     color: #00f700;
   }
+
+  span {
+    white-space: nowrap;
+  }
 }
 
 .nominated {
